samples/_failures_safe/1761005329_f28bc0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b896ff19.c: In function ‘main’:
./samples/SAFE/__tmp_b896ff19.c:140:12: error: missing terminating " character
  140 |     printf("Compression
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_b896ff19.c:140:5: error: expected expression at end of input
  140 |     printf("Compression
      |     ^~~~~~
./samples/SAFE/__tmp_b896ff19.c:140:5: error: expected declaration or statement at end of input
